Home page cover flow implemented

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Syra Music",
+  "name": "Syra Music Webpage",
   "icons": [
     {
       "src": "favicon.ico",
