--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,7 @@
             "type": "image/png"
         }
     ],
+    "start_url": "https://www.syramusic.com/",
     "theme_color": "#000000",
     "background_color": "#000000",
     "display": "standalone"
