--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/syramusic/v16/.suo
